2004-05-25  Todd Berman  <tberman@sevenl.net>

	* ILAsmLanguageBinding.cs: sigchange for GenerateMakefile

2004-04-28  Todd Berman  <tberman@sevenl.net>

	* ILAsmLanguageBinding.cs: stubbing GenerateMakefile


2004-04-26  John Luke  <jluke@cfl.rr.com>

	* *.cs: ILAsmBinding namespace
	* ILAsmCompilerManager.cs: change it to work like the Java one
	* Project/CompilationParameters.cs: use /exe and /dll




	import from SD svn
	not yet working and untested
