@@ -1,3 +1,9 @@
+2004-06-08  John Luke  <jluke@cfl.rr.com>
+
+	* ILAsmCompilerManager.cs:
+	* ILAsmExecutionManager.cs: use (cmd, args) overload of ProcessStartInfo
+	constructor so I can compile and run hello world on Beta2
+
 2004-05-25  Todd Berman  <tberman@sevenl.net>
 
 	* ILAsmLanguageBinding.cs: sigchange for GenerateMakefile
